--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>io.github.hap-java</groupId>
-	<artifactId>hap</artifactId>
+	<groupId>io.github.yfre</groupId>
+	<artifactId>hap-java</artifactId>
 	<name>hap-java</name>
 	<description>Homekit Accessory Protocol for Java</description>
-	<version>2.0.0-snapshot</version>
+	<version>2.1.0OH</version>
 	<packaging>jar</packaging>
 	<url>https://github.com/hap-java/HAP-Java</url>
 
@@ -283,13 +283,9 @@
 			<url>https://hap-java.github.io/</url>
 		</site>
 		<repository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+			<id>bintray-yfre-hap-java</id>
+			<url>https://api.bintray.com/maven/yfre/hap-java/hap-java/;publish=0</url>
 		</repository>
-		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
 	</distributionManagement>
 
 	<reporting>
@@ -321,59 +317,4 @@
 			</plugin>
 		</plugins>
 	</reporting>
-
-	<profiles>
-		<profile>
-			<id>ossrh</id>
-			<properties>
-					<gpg.executable>gpg</gpg.executable>
-					<gpg.keyname>${env.GPG_KEYNAME}</gpg.keyname>
-					<gpg.passphrase>${env.GPG_PASSPHRASE}</gpg.passphrase>
-					<gpg.defaultKeyring>false</gpg.defaultKeyring>
-					<gpg.publicKeyring>deploy/pubring.gpg</gpg.publicKeyring>
-					<gpg.secretKeyring>deploy/secring.gpg</gpg.secretKeyring>
-			</properties>
-			<activation>
-					<property>
-							<name>performRelease</name>
-							<value>true</value>
-					</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.5</version>
-						<executions>
-							<execution>
-								<id>sign-artifacts</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.sonatype.plugins</groupId>
-						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>1.6.3</version>
-						<extensions>true</extensions>
-						<configuration>
-							<serverId>ossrh</serverId>
-							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-							<autoReleaseAfterClose>true</autoReleaseAfterClose>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-release-plugin</artifactId>
-						<version>2.5.3</version>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
-
 </project>
